# prvsmsbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  categories.py  config.py  gateway.py  handlers.py  listener.py  main.py
docs/: ARCHITECTURE.md  ENV_FIX_SAMPLE.md  N8N_SETUP.md  TELEGRAM_PROXY_RUNBOOK.md  rewire-reference.md
prvsmsbot/: __init__.py  categories.py  cli.py  commands.py  config.py  formatting.py  main.py  n8n_client.py  notifier.py  render.py  security.py  telegram_app.py  webhook_server.py
scripts/: run.sh
tests/: test_categories.py  test_commands.py  test_config.py  test_security.py
workflows/: 01-prvsmsbot-send-sms.json  02-prvsmsbot-inbox.json  03-prvsmsbot-outbox.json  04-prvsmsbot-ussd-single.json  05-prvsmsbot-ussd-session-live.json  06-prvsmsbot-health.json  07-prvsmsbot-smsgate-webhook-config.json
