[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prvsmsbot"
version = "0.1.0"
description = "Telegram + n8n control plane for SMSGate SMS/USSD workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "prvsmsbot contributors" }
]
dependencies = [
  "python-telegram-bot>=21.7",
  "requests>=2.32.0",
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
prvsmsbot = "prvsmsbot.main:main"
prvsmsbot-cli = "prvsmsbot.cli:main"

[tool.setuptools]
packages = ["prvsmsbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
