[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prvsmsbot"
version = "2.0.0"
description = "Telegram bot with direct SMSGate gateway integration (no n8n)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "prvsmsbot contributors" }
]
dependencies = [
  # Telegram bot framework (async, v20+)
  "python-telegram-bot>=21.7",
  # Async HTTP client for SMSGate REST calls
  "httpx>=0.27.0",
  # Async WebSocket client for /ussd/live
  "websockets>=12.0",
  # Async HTTP server for the inbound SMSGate webhook
  "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
prvsmsbot = "bot.main:main"

[tool.setuptools]
packages = ["bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
